@@ -12,7 +12,7 @@
                 <value>IceChat 2009</value>
             </setting>
             <setting name="Version" serializeAs="String">
-                <value>Beta 5.3</value>
+                <value>Beta 5.4</value>
             </setting>
         </IceChat.Properties.Settings>
     </userSettings>
